tests/snapshots/test_cli__test-project-bad-certify-json.snap
---
source: tests/test-cli.rs
expression: format_outputs(&output)
---
stdout:
{"error": {"message": "'asdfsdfs' isn't one of your foreign packages","severity": "error","labels": [],"related": []}}

stderr:

