tests/snapshots/test_cli__test-project-json.snap
---
source: tests/test-cli.rs
expression: format_outputs(&output)
---
stdout:
{
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "atty",
      "version": "0.2.14"
    },
    {
      "name": "bitflags",
      "version": "1.3.2"
    },
    {
      "name": "autocfg",
      "version": "1.1.0"
    },
    {
      "name": "clap",
      "version": "3.1.8"
    },
    {
      "name": "base64",
      "version": "0.13.0"
    }
  ],
  "vetted_partially": [
    {
      "name": "unicode-bidi",
      "version": "0.3.7"
    }
  ],
  "vetted_with_exemptions": [
    {
      "name": "libc",
      "version": "0.2.123"
    },
    {
      "name": "hermit-abi",
      "version": "0.1.19"
    },
    {
      "name": "winapi-i686-pc-windows-gnu",
      "version": "0.4.0"
    },
    {
      "name": "winapi-x86_64-pc-windows-gnu",
      "version": "0.4.0"
    },
    {
      "name": "winapi",
      "version": "0.3.9"
    },
    {
      "name": "hashbrown",
      "version": "0.11.2"
    },
    {
      "name": "indexmap",
      "version": "1.8.1"
    },
    {
      "name": "memchr",
      "version": "2.4.1"
    },
    {
      "name": "os_str_bytes",
      "version": "6.0.0"
    },
    {
      "name": "strsim",
      "version": "0.10.0"
    },
    {
      "name": "winapi-util",
      "version": "0.1.5"
    },
    {
      "name": "termcolor",
      "version": "1.1.3"
    },
    {
      "name": "textwrap",
      "version": "0.15.0"
    },
    {
      "name": "unicode-xid",
      "version": "0.2.2"
    },
    {
      "name": "proc-macro2",
      "version": "1.0.37@git:4445659b0f753a928059244c875a58bb12f791e9"
    },
    {
      "name": "bytes",
      "version": "1.1.0"
    },
    {
      "name": "cfg-if",
      "version": "1.0.0"
    },
    {
      "name": "encoding_rs",
      "version": "0.8.31"
    },
    {
      "name": "futures-core",
      "version": "0.3.21"
    },
    {
      "name": "futures-task",
      "version": "0.3.21"
    },
    {
      "name": "pin-project-lite",
      "version": "0.2.8"
    },
    {
      "name": "pin-utils",
      "version": "0.1.0"
    },
    {
      "name": "futures-util",
      "version": "0.3.21"
    },
    {
      "name": "fnv",
      "version": "1.0.7"
    },
    {
      "name": "futures-sink",
      "version": "0.3.21"
    },
    {
      "name": "itoa",
      "version": "1.0.1"
    },
    {
      "name": "http",
      "version": "0.2.6"
    },
    {
      "name": "slab",
      "version": "0.4.6"
    },
    {
      "name": "log",
      "version": "0.4.16"
    },
    {
      "name": "miow",
      "version": "0.3.7"
    },
    {
      "name": "ntapi",
      "version": "0.3.7"
    },
    {
      "name": "wasi",
      "version": "0.11.0+wasi-snapshot-preview1"
    },
    {
      "name": "mio",
      "version": "0.8.2"
    },
    {
      "name": "socket2",
      "version": "0.4.4"
    },
    {
      "name": "tokio",
      "version": "1.17.0"
    },
    {
      "name": "proc-macro2",
      "version": "1.0.37"
    },
    {
      "name": "quote",
      "version": "1.0.18"
    },
    {
      "name": "syn",
      "version": "1.0.91"
    },
    {
      "name": "tracing-attributes",
      "version": "0.1.20"
    },
    {
      "name": "lazy_static",
      "version": "1.4.0"
    },
    {
      "name": "tracing-core",
      "version": "0.1.25"
    },
    {
      "name": "tracing",
      "version": "0.1.33"
    },
    {
      "name": "tokio-util",
      "version": "0.7.1"
    },
    {
      "name": "h2",
      "version": "0.3.13"
    },
    {
      "name": "http-body",
      "version": "0.4.4"
    },
    {
      "name": "futures-channel",
      "version": "0.3.21"
    },
    {
      "name": "httparse",
      "version": "1.7.0"
    },
    {
      "name": "httpdate",
      "version": "1.0.2"
    },
    {
      "name": "tower-service",
      "version": "0.3.1"
    },
    {
      "name": "try-lock",
      "version": "0.2.3"
    },
    {
      "name": "want",
      "version": "0.3.0"
    },
    {
      "name": "hyper",
      "version": "0.14.18"
    },
    {
      "name": "foreign-types-shared",
      "version": "0.1.1"
    },
    {
      "name": "foreign-types",
      "version": "0.3.2"
    },
    {
      "name": "once_cell",
      "version": "1.10.0"
    },
    {
      "name": "cc",
      "version": "1.0.73"
    },
    {
      "name": "pkg-config",
      "version": "0.3.25"
    },
    {
      "name": "vcpkg",
      "version": "0.2.15"
    },
    {
      "name": "openssl-sys",
      "version": "0.9.72"
    },
    {
      "name": "openssl",
      "version": "0.10.38"
    },
    {
      "name": "openssl-probe",
      "version": "0.1.5"
    },
    {
      "name": "schannel",
      "version": "0.1.19"
    },
    {
      "name": "core-foundation-sys",
      "version": "0.8.3"
    },
    {
      "name": "core-foundation",
      "version": "0.9.3"
    },
    {
      "name": "security-framework-sys",
      "version": "2.6.1"
    },
    {
      "name": "security-framework",
      "version": "2.6.1"
    },
    {
      "name": "instant",
      "version": "0.1.12"
    },
    {
      "name": "fastrand",
      "version": "1.7.0"
    },
    {
      "name": "redox_syscall",
      "version": "0.2.13"
    },
    {
      "name": "remove_dir_all",
      "version": "0.5.3"
    },
    {
      "name": "tempfile",
      "version": "3.3.0"
    },
    {
      "name": "native-tls",
      "version": "0.2.10"
    },
    {
      "name": "tokio-native-tls",
      "version": "0.3.0"
    },
    {
      "name": "hyper-tls",
      "version": "0.5.0"
    },
    {
      "name": "ipnet",
      "version": "2.4.0"
    },
    {
      "name": "bumpalo",
      "version": "3.9.1"
    },
    {
      "name": "wasm-bindgen-shared",
      "version": "0.2.80"
    },
    {
      "name": "wasm-bindgen-backend",
      "version": "0.2.80"
    },
    {
      "name": "wasm-bindgen-macro-support",
      "version": "0.2.80"
    },
    {
      "name": "wasm-bindgen-macro",
      "version": "0.2.80"
    },
    {
      "name": "wasm-bindgen",
      "version": "0.2.80"
    },
    {
      "name": "js-sys",
      "version": "0.3.57"
    },
    {
      "name": "mime",
      "version": "0.3.16"
    },
    {
      "name": "percent-encoding",
      "version": "2.1.0"
    },
    {
      "name": "serde",
      "version": "1.0.136"
    },
    {
      "name": "ryu",
      "version": "1.0.9"
    },
    {
      "name": "serde_json",
      "version": "1.0.79"
    },
    {
      "name": "matches",
      "version": "0.1.9"
    },
    {
      "name": "form_urlencoded",
      "version": "1.0.1"
    },
    {
      "name": "serde_urlencoded",
      "version": "0.7.1"
    },
    {
      "name": "tinyvec_macros",
      "version": "0.1.0"
    },
    {
      "name": "tinyvec",
      "version": "1.5.1"
    },
    {
      "name": "unicode-normalization",
      "version": "0.1.19"
    },
    {
      "name": "idna",
      "version": "0.2.3"
    },
    {
      "name": "url",
      "version": "2.2.2"
    },
    {
      "name": "web-sys",
      "version": "0.3.57"
    },
    {
      "name": "wasm-bindgen-futures",
      "version": "0.4.30"
    },
    {
      "name": "winreg",
      "version": "0.10.1"
    },
    {
      "name": "reqwest",
      "version": "0.11.10"
    }
  ]
}
stderr:

