tests/snapshots/test_cli__test-project-suggest-deeper.snap
---
source: tests/test-cli.rs
assertion_line: 186
expression: stdout
---
recommended audits:
    tinyvec_macros:0.1.0                for safe-to-deploy  (87 lines)      (used by tinyvec) 
    matches:0.1.9                       for safe-to-deploy  (211 lines)     (used by form_urlencoded, idna, url) 
    foreign-types-shared:0.1.1          for safe-to-deploy  (303 lines)     (used by foreign-types) 
    try-lock:0.2.3                      for safe-to-deploy  (386 lines)     (used by want) 
    openssl-probe:0.1.5                 for safe-to-deploy  (456 lines)     (used by native-tls) 
    tower-service:0.3.1                 for safe-to-deploy  (507 lines)     (used by hyper) 
    atty:0.2.14                         for safe-to-deploy  (508 lines)     (used by clap) 
    wasm-bindgen-shared:0.2.80          for safe-to-deploy  (516 lines)     (used by wasm-bindgen-backend, wasm-bindgen-macro-support) 
    pin-utils:0.1.0                     for safe-to-deploy  (544 lines)     (used by futures-util) 
    futures-sink:0.3.21                 for safe-to-deploy  (551 lines)     (used by h2, tokio-util) 
    foreign-types:0.3.2                 for safe-to-deploy  (584 lines)     (used by openssl) 
    cfg-if:1.0.0                        for safe-to-deploy  (588 lines)     (used by encoding_rs, instant, and 6 others) 
    remove_dir_all:0.5.3                for safe-to-deploy  (598 lines)     (used by tempfile) 
    instant:0.1.12                      for safe-to-deploy  (678 lines)     (used by fastrand) 
    form_urlencoded:1.0.1               for safe-to-deploy  (695 lines)     (used by serde_urlencoded, url) 
    want:0.3.0                          for safe-to-deploy  (703 lines)     (used by hyper) 
    percent-encoding:2.1.0              for safe-to-deploy  (708 lines)     (used by form_urlencoded, reqwest, url) 
    fnv:1.0.7                           for safe-to-deploy  (736 lines)     (used by h2, http) 
    itoa:1.0.1                          for safe-to-deploy  (796 lines)     (used by http, hyper, and 2 others) 
    lazy_static:1.4.0                   for safe-to-deploy  (882 lines)     (used by native-tls, reqwest, and 3 others) 
    hermit-abi:0.1.19                   for safe-to-run     (938 lines)     (used by atty) 
    httpdate:1.0.2                      for safe-to-deploy  (1001 lines)    (used by hyper) 
    winapi-util:0.1.5                   for safe-to-deploy  (1101 lines)    (used by termcolor) 
    winapi-i686-pc-windows-gnu:0.4.0    for safe-to-deploy  (1133 lines)    (used by winapi) 
    winapi-x86_64-pc-windows-gnu:0.4.0  for safe-to-deploy  (1168 lines)    (used by winapi) 
    futures-core:0.3.21                 for safe-to-deploy  (1182 lines)    (used by futures-channel, futures-util, and 4 others) 
    futures-task:0.3.21                 for safe-to-deploy  (1187 lines)    (used by futures-util) 
    http-body:0.4.4                     for safe-to-deploy  (1262 lines)    (used by hyper, reqwest) 
    wasm-bindgen-macro:0.2.80           for safe-to-deploy  (1275 lines)    (used by wasm-bindgen) 
    hyper-tls:0.5.0                     for safe-to-deploy  (1301 lines)    (used by reqwest) 
    wasm-bindgen-futures:0.4.30         for safe-to-deploy  (1304 lines)    (used by reqwest) 
    fastrand:1.7.0                      for safe-to-deploy  (1375 lines)    (used by tempfile) 
    mime:0.3.16                         for safe-to-deploy  (1721 lines)    (used by reqwest) 
    pkg-config:0.3.25                   for safe-to-deploy  (1754 lines)    (used by openssl-sys) 
    tokio-native-tls:0.3.0              for safe-to-deploy  (1804 lines)    (used by hyper-tls, reqwest) 
    wasm-bindgen-macro-support:0.2.80   for safe-to-deploy  (1966 lines)    (used by wasm-bindgen-macro) 
    core-foundation-sys:0.8.3           for safe-to-deploy  (1971 lines)    (used by core-foundation, security-framework, security-framework-sys) 
    security-framework-sys:2.6.1        for safe-to-deploy  (2023 lines)    (used by native-tls, security-framework) 
    unicode-xid:0.2.2                   for safe-to-deploy  (2050 lines)    (used by proc-macro2, syn) 
    serde_urlencoded:0.7.1              for safe-to-deploy  (2127 lines)    (used by reqwest) 
    termcolor:1.1.3                     for safe-to-deploy  (2585 lines)    (used by clap) 
    slab:0.4.6                          for safe-to-deploy  (2622 lines)    (used by h2) 
    os_str_bytes:6.0.0                  for safe-to-deploy  (2918 lines)    (used by clap) 
    wasm-bindgen-backend:0.2.80         for safe-to-deploy  (3019 lines)    (used by wasm-bindgen-macro-support) 
    miow:0.3.7                          for safe-to-deploy  (3135 lines)    (used by mio) 
    wasi:0.11.0+wasi-snapshot-preview1  for safe-to-deploy  (3309 lines)    (used by mio) 
    unicode-bidi:0.3.7                  for safe-to-deploy  (3398 lines)    (used by idna) 
    quote:1.0.18                        for safe-to-deploy  (3845 lines)    (used by syn, tracing-attributes, and 3 others) 
    redox_syscall:0.2.13                for safe-to-deploy  (3897 lines)    (used by tempfile) 
    core-foundation:0.9.3               for safe-to-deploy  (3960 lines)    (used by security-framework) 
    tracing-attributes:0.1.20           for safe-to-deploy  (3964 lines)    (used by tracing) 
    ipnet:2.4.0                         for safe-to-deploy  (3980 lines)    (used by reqwest) 
    futures-channel:0.3.21              for safe-to-deploy  (3999 lines)    (used by hyper) 
    tempfile:3.3.0                      for safe-to-deploy  (4066 lines)    (used by native-tls) 
    native-tls:0.2.10                   for safe-to-deploy  (4089 lines)    (used by hyper-tls, reqwest, tokio-native-tls) 
    once_cell:1.10.0                    for safe-to-deploy  (4140 lines)    (used by openssl) 
    winreg:0.10.1                       for safe-to-deploy  (4276 lines)    (used by reqwest) 
    ryu:1.0.9                           for safe-to-deploy  (4531 lines)    (used by serde_json, serde_urlencoded) 
    schannel:0.1.19                     for safe-to-deploy  (4607 lines)    (used by native-tls) 
    log:0.4.16                          for safe-to-deploy  (5632 lines)    (used by mio, native-tls, and 3 others) 
    proc-macro2:1.0.37                  for safe-to-deploy  (5702 lines)    (used by quote, syn, and 3 others) 
    socket2:0.4.4                       for safe-to-deploy  (6018 lines)    (used by hyper, tokio) 
    pin-project-lite:0.2.8              for safe-to-deploy  (6107 lines)    (used by futures-util, http-body, and 5 others) 
    tracing-core:0.1.25                 for safe-to-deploy  (6163 lines)    (used by tracing) 
    textwrap:0.15.0                     for safe-to-deploy  (6165 lines)    (used by clap) 
    cc:1.0.73                           for safe-to-deploy  (6671 lines)    (used by openssl-sys) 
    httparse:1.7.0                      for safe-to-deploy  (7265 lines)    (used by hyper) 
    memchr:2.4.1                        for safe-to-deploy  (8718 lines)    (used by os_str_bytes, tokio) 
    bytes:1.1.0                         for safe-to-deploy  (9213 lines)    (used by h2, http, and 6 others) 
    indexmap:1.8.1                      for safe-to-deploy  (9452 lines)    (used by clap, h2) 
    openssl-sys:0.9.72                  for safe-to-deploy  (9484 lines)    (used by native-tls, openssl) 
    security-framework:2.6.1            for safe-to-deploy  (9776 lines)    (used by native-tls) 
    bumpalo:3.9.1                       for safe-to-deploy  (10106 lines)   (used by wasm-bindgen-backend) 
    tracing:0.1.33                      for safe-to-deploy  (10957 lines)   (used by h2, hyper, tokio-util) 
    mio:0.8.2                           for safe-to-deploy  (11882 lines)   (used by tokio) 
    js-sys:0.3.57                       for safe-to-deploy  (12875 lines)   (used by reqwest, wasm-bindgen-futures, web-sys) 
    tokio-util:0.7.1                    for safe-to-deploy  (13877 lines)   (used by h2) 
    hashbrown:0.11.2                    for safe-to-deploy  (14609 lines)   (used by indexmap) 
    serde:1.0.136                       for safe-to-deploy  (16148 lines)   (used by reqwest, serde_json, serde_urlencoded) 
    url:2.2.2                           for safe-to-deploy  (16350 lines)   (used by reqwest) 
    tinyvec:1.5.1                       for safe-to-deploy  (16758 lines)   (used by unicode-normalization) 
    http:0.2.6                          for safe-to-deploy  (16826 lines)   (used by h2, http-body, and 2 others) 
    wasm-bindgen:0.2.80                 for safe-to-deploy  (20978 lines)   (used by js-sys, reqwest, and 2 others) 
    ntapi:0.3.7                         for safe-to-deploy  (21234 lines)   (used by mio) 
    reqwest:0.11.10                     for safe-to-deploy  (21663 lines)   (used by test-project) 
    serde_json:1.0.79                   for safe-to-deploy  (22855 lines)   (used by reqwest, test-project) 
    futures-util:0.3.21                 for safe-to-deploy  (25074 lines)   (used by h2, hyper, reqwest) 
    hyper:0.14.18                       for safe-to-deploy  (25617 lines)   (used by hyper-tls, reqwest) 
    h2:0.3.13                           for safe-to-deploy  (26066 lines)   (used by hyper, reqwest) 
    unicode-normalization:0.1.19        for safe-to-deploy  (28628 lines)   (used by idna) 
    openssl:0.10.38                     for safe-to-deploy  (28634 lines)   (used by native-tls) 
    idna:0.2.3                          for safe-to-deploy  (32538 lines)   (used by url) 
    vcpkg:0.2.15                        for safe-to-deploy  (42648 lines)   (used by openssl-sys) 
    syn:1.0.91                          for safe-to-deploy  (57175 lines)   (used by tracing-attributes, wasm-bindgen-backend, wasm-bindgen-macro-support) 
    tokio:1.17.0                        for safe-to-deploy  (91278 lines)   (used by h2, hyper, and 5 others) 
    libc:0.2.123                        for safe-to-deploy  (94067 lines)   (used by atty, core-foundation, and 10 others) 
    winapi:0.3.9                        for safe-to-deploy  (181329 lines)  (used by atty, mio, and 9 others) 
    web-sys:0.3.57                      for safe-to-deploy  (197014 lines)  (used by reqwest, wasm-bindgen-futures) 
    encoding_rs:0.8.31                  for safe-to-deploy  (507252 lines)  (used by reqwest) 

estimated review backlog: 1771824 lines

Use |cargo vet certify| to record the audits.

